Fix some java compiler warnings (osrf/ros2_java#72)
Signed-off-by: Ivan Santiago Paunovic <ivanpauno@ekumenlabs.com>